--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,10 @@
     <table width="100%">
       <thead>
         <tr style="text-align: left;">
-          <th width="40%">Title</th>
-          <th width="30%">Author</th>
+          <th width="20%">Title</th>
+          <th width="40%">Author</th>
           <th width="10%">Year</th>
+          <th width="10%">Format</th>
           <th width="20%">ID</th>
         </tr>
       </thead>
@@ -46,6 +47,7 @@
                   <td>${result.Title}</td>
                   <td>${result.Author}</td>
                   <td>${result.Year}</td>
+                  <td>${result.Format}</td>
                   <td>${result.ID}</td>
                 </tr>
               `);
