--- a/templates/index.html
+++ b/templates/index.html
@@ -44,11 +44,9 @@
             parsed.forEach(result => {
               const row = $(`
                 <tr>
-                  <td>${result.Title}</td>
-                  <td>${result.Author}</td>
-                  <td>${result.Year}</td>
-                  <td>${result.Format}</td>
-                  <td>${result.ID}</td>
+                  ${Object.keys(result).map(key =>
+                    `<td>${result[key]}</td>`
+                  ).join(' ')}
                 </tr>
               `);
 
