Adding styling for on hover of rows

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title></title>
+    <title>BOOKS</title>
+    <style type="text/css" media="screen">
+      #search-results tr:hover {
+        background-color: lightgrey;
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
     <form id="search-form" onsubmit="return false">
