Adding another xhr call to save the selected row

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,6 +57,12 @@
               `);
 
               searchResults.append(row);
+              row.on('click', () => {
+                $.ajax({
+                  url: `/books/add?id=${result.ID}`,
+                  method: 'GET'
+                })
+              })
             })
           }
         })
